Fix JSON text being too long

--- a/src/styles/components/_syntax.scss
+++ b/src/styles/components/_syntax.scss
@@ -1,4 +1,6 @@
 .syntax {
+  overflow: auto;
+
   .string  { color: #0b7948; }
   .number  { color: #0b7948; }
   .boolean { color: #0000ff; }
